# videoplayer

./: README.md
androidplayer/: README.md
androidplayer/app/: build.gradle.kts
androidplayer/app/src/main/cpp/: CMakeLists.txt
androidplayer/app/src/main/cpp/include/: AAudioRender.h  AudioDecoder.h  AudioRingBuffer.h  Demuxer.h  Framequeue.h  Packetqueue.h  Videodecoder.h  Videorender.h  threadsafequeue.h
androidplayer/app/src/main/cpp/include/libavutil/: ffversion.h
androidplayer/app/src/main/cpp/src/: AAudioRender.cpp  ANWRender.cpp  AudioDecoder.cpp  AudioRingBuffer.cpp  Demuxer.cpp  Videodecoder.cpp  Videorender.cpp  play.cpp
androidplayer/app/src/main/java/com/example/androidplayer/: MainActivity.java  Player.java
androidplayer/app/src/main/res/layout/: activity_main.xml
projectall2/: README.md
projectall2/media_player/: CMakeLists.txt
projectall2/media_player/include/: AudioFrameQueue.h  AudioOutput.h  FrameQueue.h  MediaDecoder.h  VideoRenderer.h  network_client.h
projectall2/media_player/src/: AudioFrameQueue.cpp  AudioOutput.cpp  FrameQueue.cpp  MediaDecoder.cpp  VideoRenderer.cpp  main.cpp  network_client.cpp
projectall2/tcpepollserver/: test_server_epoll  test_server_epoll.cpp  video_server
